<resources>
    <string name="app_name">Islami</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quran">Quran</string>
    <string name="hadeth">Hadeth</string>
    <string name="tasbeh">Tasbeh</string>
    <string name="radio">Radio</string>
    <string name="chapter_name">Chapter Name</string>
    <string name="_8">8</string>
    <string name="إسلامى">إسلامى</string>
    <string name="عدد_التسبيحات">عدد التسبيحات</string>
    <string name="سبحان_الله">سبحان الله</string>
    <string name="change_mode">Change mode</string>
    <string name="title_activity_sura_details">SuraDetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>